--- a/file.css
+++ b/file.css
@@ -3,7 +3,7 @@
     }
     body {
       margin: 0;
-      background: #f5f7fa;
+      background: #121212;
       display: flex;
       align-items: center;
       justify-content: center;
